--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
         const pdfs = [
             { displayName: "Andregradsfunksjoner - informasjon", fileName: "andregradsfunksjoner.pdf" },
             { displayName: "Eksponentialfunksjoner - informasjon og oppgaver", fileName: "eksponentialfunksjoner.pdf" },
-            { displayName: "Algebra teori 1 (halvveis ferdig)", fileName: "algebra_teori_1nc.pdf" }
+            { displayName: "Algebra teori 1 (halvveis ferdig)", fileName: "algebra_teori_1nc.pdf" },
+            { displayName: "Likning oppgaver (halvveis ferdig, skal legge til forklaringer)", fileName: "o_likninger.pdf" }
         ];
 
         // Function to generate PDF list
