--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@
             { displayName: "Andregradsfunksjoner - informasjon", fileName: "andregradsfunksjoner.pdf" },
             { displayName: "Eksponentialfunksjoner - informasjon og oppgaver", fileName: "eksponentialfunksjoner.pdf" },
             { displayName: "Algebra teori 1 (halvveis ferdig)", fileName: "algebra_teori_1nc.pdf" },
-            { displayName: "Likning oppgaver (halvveis ferdig, skal legge til forklaringer)", fileName: "o_likninger.pdf" }
+            { displayName: "Likning oppgaver (halvveis ferdig, skal legge til forklaringer)", fileName: "o_likninger.pdf" },
+            { displayName: "Min (Andreas 10E) besvarelse del 2 10. trinn", fileName: "and-del2.pdf" }
         ];
 
         // Function to generate PDF list
